# RAG-based-Enterprise-Data-Into-Actionable-Intelligence

./: .gitignore  DataIntelligence_ProjectRoadmap.md  README.md  docker-compose.yml  dummy_sales_data.csv  generate_massive_datasets.py  large_customer_support.csv  large_ecommerce_sales - Copy.csv  large_financial_stocks.csv  large_hr_attrition.csv  large_iot_sensors.csv  large_marketing_campaigns.csv  large_server_metrics.csv  large_supply_chain.csv  run_local.ps1  strip_reqs.py  teardown_gcp.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_pipeline.py  test_rag.py
ml/: .dockerignore  .env.example  Dockerfile.agent  Dockerfile.anomaly  Dockerfile.forecast  Dockerfile.kg  README.md  pyproject.toml  requirements.txt
ml/agent/: analytics_agent.py  main.py
ml/anomaly/: detector.py  main.py
ml/forecast/: forecaster.py  main.py
ml/kg/: extractor.py  main.py  spanner_graph_schema.sql
ml/notebooks/: 01_embedding_benchmark.py  02_ragas_evaluation.py
ml/pipelines/: composer_mlops_dag.py  drift_detector.py  model_card_isolation_forest.yaml  vertex_training_pipeline.py
ml/rag/: Dockerfile  caching_and_ab.py  chunking.py  engine.py  evaluation.py  main.py  multimodal_rag.py  schemas.py
ml/shared/: __init__.py  bigquery_client.py  config.py  logging_setup.py  pubsub_client.py
ml/tests/: conftest.py  test_analytics_agent.py  test_anomaly_detector.py  test_forecaster.py  test_kg_extractor.py  test_rag_engine.py
(+76 files in other folders)
